--- a/RTNCalculator/android/build.gradle
+++ b/RTNCalculator/android/build.gradle
@@ -8,6 +8,8 @@ buildscript {
   }
   dependencies {
     classpath("com.android.tools.build:gradle:7.2.1")
+    classpath("com.facebook.react:react-native-gradle-plugin")
+    classpath("de.undercouch:gradle-download-task:5.0.1")
   }
 }
 
@@ -18,16 +20,28 @@ android {
   compileSdkVersion safeExtGet('compileSdkVersion', 31)
 }
 
-repositories {
-  maven {
-    // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
-    url "$projectDir/../node_modules/react-native/android"
-  }
-  mavenCentral()
-  google()
+allprojects {
+    repositories {
+        maven {
+            // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
+            url("$rootDir/../node_modules/react-native/android")
+        }
+        maven {
+            // Android JSC is installed from npm
+            url("$rootDir/../node_modules/jsc-android/dist")
+        }
+        mavenCentral {
+            // We don't want to fetch react-native from Maven Central as there are
+            // older versions over there.
+            content {
+                excludeGroup "com.facebook.react"
+            }
+        }
+        google()
+        maven { url 'https://www.jitpack.io' }
+    }
 }
 
 dependencies {
   implementation 'com.facebook.react:react-native:+'
 }
-
